--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@yarnpkg/sdks": "^3.0.0-rc.6",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.2",
     "next": "12.1.6",
+    "node-sass": "^7.0.1",
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-scroll": "^1.8.7",
+    "vscode": "^1.1.37"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "@types/react-scroll": "^1.8.3",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
