--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@yarnpkg/sdks": "^3.0.0-rc.6",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.2",
@@ -18,6 +20,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "react-scroll": "^1.8.7",
+    "swiper": "^8.2.2",
     "vscode": "^1.1.37"
   },
   "devDependencies": {
