--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.32.0",
     "react-scroll": "^1.8.7",
     "swiper": "^8.2.2",
     "vscode": "^1.1.37"
