--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.8",
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -18,6 +19,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.2",
     "framer-motion": "^6.3.11",
+    "graphql": "^16.5.0",
     "next": "12.1.6",
     "node-sass": "^7.0.1",
     "react": "18.1.0",
@@ -25,6 +27,7 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.0",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.1",
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
     "swiper": "^8.2.2",
