--- a/package.json
+++ b/package.json
@@ -17,28 +17,25 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@yarnpkg/sdks": "^3.0.0-rc.6",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.2",
-    "framer-motion": "^6.3.11",
+    "framer-motion": "^6.3.16",
     "graphql": "^16.5.0",
     "next": "12.1.6",
     "node-sass": "^7.0.1",
     "react": "18.1.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.0",
     "react-icons": "^4.4.0",
-    "react-query": "^3.39.1",
     "react-scroll": "^1.8.7",
-    "styled-components": "^5.3.5",
     "swiper": "^8.2.2",
-    "vscode": "^1.1.37"
+    "vscode": "^1.1.37",
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@types/react-scroll": "^1.8.3",
+    "dotenv-webpack": "^7.1.1",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
